--- a/pom.xml
+++ b/pom.xml
@@ -98,8 +98,9 @@
 
 
 	<build>
+	<defaultGoal>install</defaultGoal>
+	 <sourceDirectory>src</sourceDirectory>
 		<plugins>
-
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
